--- a/SmartFactoryTests/SmartFactoryTests.csproj
+++ b/SmartFactoryTests/SmartFactoryTests.csproj
@@ -18,4 +18,12 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Api\" />
+    <Folder Include="Application\" />
+    <Folder Include="Core\" />
+    <Folder Include="Domain\" />
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
 </Project>
