--- a/SmartFactoryApi/SmartFactoryApi.csproj
+++ b/SmartFactoryApi/SmartFactoryApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmartFactoryApplication\SmartFactoryApplication.csproj" />
+    <ProjectReference Include="..\SmartFactoryInfrastructure\SmartFactoryInfrastructure.csproj" />
   </ItemGroup>
 
 </Project>
