--- a/SmartFactoryInfrastructure/SmartFactoryInfrastructure.csproj
+++ b/SmartFactoryInfrastructure/SmartFactoryInfrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SmartFactoryDomain\SmartFactoryDomain.csproj" />
+  </ItemGroup>
+
 </Project>
