--- a/SmartFactoryApi/SmartFactoryApi.csproj
+++ b/SmartFactoryApi/SmartFactoryApi.csproj
@@ -9,12 +9,18 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SmartFactoryApplication\SmartFactoryApplication.csproj" />
-    <ProjectReference Include="..\SmartFactoryInfrastructure\SmartFactoryInfrastructure.csproj" />
+    <ProjectReference Include="..\SmartFactoryData\SmartFactoryData.csproj" />
   </ItemGroup>
 
 </Project>
